--- a/src/app/components/message/message.component.scss
+++ b/src/app/components/message/message.component.scss
@@ -3,6 +3,12 @@
   flex-direction: column;
   padding: 1rem;
 
+  p {
+    margin: 0;
+    white-space: pre-wrap;
+    overflow-wrap: anywhere;
+  }
+
   .image {
     height: 5rem;
     width: 10rem;
