--- a/src/app/components/chat/chat.component.scss
+++ b/src/app/components/chat/chat.component.scss
@@ -8,7 +8,7 @@
     padding: 2rem;
     overflow: hidden;
     gap: 2rem;
-    max-width: 45rem;
+    width: 100%;
     background-color: white;
     border-radius: 1rem;
 
@@ -16,6 +16,7 @@
       display: flex;
       flex-direction: column;
       height: 100%;
+      width: 100%;
       gap: 2rem;
       margin: auto;
 
@@ -23,7 +24,7 @@
         display: flex;
         flex-direction: column;
         gap: 0.5rem;
-        max-width: 30rem;
+        width: 100%;
         overflow-y: scroll;
         scrollbar-width: none;
         flex: 1;
@@ -34,36 +35,42 @@
           transparent 100%
         );
 
+        > p {
+          margin: 0;
+        }
+
         .message-right {
           border-radius: 1rem;
           background-color: aliceblue;
-          width: 20rem;
+          width: fit-content;
           margin-left: auto;
         }
 
-        .message-left {
-          border-radius: 1rem;
-          background-color: palegreen;
-          width: 20rem;
-          margin-right: auto;
+        .left-message-block {
+          display: flex;
+          gap: 1rem;
+
+          .message-left {
+            border-radius: 1rem;
+            background-color: palegreen;
+            width: fit-content;
+            margin-right: auto;
+          }
         }
       }
 
       .message-creation {
         padding: 1rem;
-        background-color: #637db1;
-        margin: auto;
-        border-radius: 0.5rem;
 
         .message-form {
           display: flex;
           flex-direction: column;
           gap: 1rem;
-          max-width: 30rem;
 
           textarea {
-            border-radius: 0.5rem;
+            padding: 1rem;
             resize: none;
+            border-radius: 1.5rem;
           }
         }
 
@@ -79,10 +86,9 @@
       gap: 2rem;
       overflow-y: scroll;
       scrollbar-width: none;
+      padding: 0.5rem 1rem;
 
       .new-chat-btn {
-        padding: 0.5rem 1rem;
-        width: fit-content;
       }
 
       .list {
